--- a/doc/manual/changelogs.tex
+++ b/doc/manual/changelogs.tex
@@ -1,5 +1,32 @@
 
-\chapter{Change Logs}
+\chapter{Change Log}
+
+\subsection*{Version 2.1.0}
+In addition to the usual internal improvements, this minor version updates brings a couple of new features and a change of one header file location:
+\begin{itemize}
+ \item scale(): Moved from file \lstinline|viennagrid/algorithm/scale.hpp| to \lstinline|viennagrid/algorithm/geometric_transform.hpp|.
+ \item Refinement: Added support for specifying the location of the new vertex for each edge to be refined.
+ \item Refinement: Added optional vertex copy map, which returns the new vertex in the refined mesh given a vertex from the original mesh.
+ \item Refinement: Added refinement towards a hyperplane, so that no element of the refined mesh is intersected by the hyperplane.
+ \item Added thin mesh configurations, where only the cells and the vertices are stored. This leads to a much lower memory footprint provided that edges, facets, etc. are not needed.
+ \item Added \lstinline|segmented_mesh| class, which encapsulates one mesh and an associated segmentation.
+ \item Added support for named segments. Rather than only providing a numeric ID, segments can be identified by a string.
+ \item Removed \lstinline|plc_2d_*| typedefs since they might cause confusion. Introduced boundary representation typedefs \lstinline|brep_*d_*| instead.
+ \item IO: Added reader for .bnd files, which are created by Synopsys tools.
+ \item IO: Added reader for .tess files (produced by Neper polycrystal generation and meshing library).
+ \item IO: Added writer for .mphtxt files (consumed by COMSOL).
+ \item IO: Added preliminary writer for .vmesh legacy files.
+ \item IO: VTK writer now writes only one .vtu file if the segmentation is empty or only one segment is present.
+ \item Added convenience routine for copying elements based on an element iterator range or element handle iterator range.
+ \item Algorithms: Added boundary/hull extraction.
+ \item Algorithms: Generalized geometric transformations (scale, affine transform).
+ \item Algorithms: Added bounding box computation, normal vector computation, and determinant of points/vectors.
+ \item Algorithms: Added inclusion tests for points inside triangles or tetrahedra.
+ \item Algorithms: Added distance between segment boundary and line.
+ \item Bugfix: Fixed logic error in computation of Voronoi quantities.
+ \item Bugfix: Compilation error for \lstinline|closest_point()| for boundary distance.
+ \item Bugfix: Element handles were not resolved correctly when elements were deleted from a mesh.
+\end{itemize}
 
 \subsection*{Version 2.0.0}
 The ViennaGrid internals have been completely redesigned for higher flexibility.
