--- a/doc/manual/data.tex
+++ b/doc/manual/data.tex
@@ -77,6 +77,7 @@ Usually an accessor or field does not store the data on its own.
 Instead, they reference a container where the data is stored.
 {\ViennaGrid} provides meta-functions and function to define and create accessor or fields from base containers.
 The example below demonstrates the use of {\ViennaGrid} accessors.
+\pagebreak
  \begin{lstlisting}
  std::vector<int> int_vector; // instantiate a simple int vector
 
