--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -99,6 +99,11 @@
    URL = {http://sourceforge.net/projects/netgen-mesher/}
 }
 % -----------------------------------------------
+@misc{neper,
+   title = {{Neper Polycrystal Generation and Meshing}},
+   URL = {http://neper.sourceforge.net/}
+}
+% -----------------------------------------------
 @misc{paraview,
    title = {{Paraview - Open Source Scientific Visualization}},
    URL = {http://www.paraview.org/}
@@ -114,6 +119,14 @@
    URL = {http://tetgen.berlios.de/}
 }
 
+
+
+
+
+@misc{comsol-fileformat,
+   title = {{COMSOL mphtxt file format}},
+   URL = {http://chemelab.ucsd.edu/CAPE/comsol/Comsol_Reference.pdf}
+}
 
 
 
